# example_offchain_verify

./: Anchor.toml
programs/example_verify/: Cargo.toml
programs/example_verify/src/: lib.rs
tests/: example_verify.ts
